--- a/style.css
+++ b/style.css
@@ -1,222 +1,167 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  html,
-  body {
-    height: 100%;
-    width: 100%;
-    background-size: 100% 100%;
-    background-color: black;
-  }
-  .mainContainer {
-    display: flex;
-    height: 100%;
-    padding: 20px 0px;
-  }
-  .leftContainer {
-    position: relative;
-    width: 50%;
-    background-color: rgb(43, 46, 56);
-  }
-  .title {
-    position: relative;
-    top: 40%;
-    left: 30%;
-    font-size: 3rem;
-    color: white;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  }
-  .rightContainer {
-    position: relative;
-    width: 50%;
-    background-color: white;
-  }
-  .display {
-    position: relative;
-    /* left: 20px; */
-    width: 240px;
-    height: 210px;
-    background-color: black;
-    border-radius: 20%;
-    border: 2px solid black;
-    /* margin-top: 10px; */
-  }
-  .watch {
-    display: flex;
-    flex-direction: column;
-    color: white;
-    position: relative;
-    height: 350px;
-    width: 280px;
-    top: 150px;
-    left: 250px;
-    background-color: black;
-    border-radius: 20%;
-    border-top: 25px solid rgb(66, 62, 62);
-    border-bottom: 25px solid rgb(63, 57, 57);
-  }
-  .watch h4 {
-    text-align: center;
-    margin-top: 10px;
-  }
-  .time {
-    text-align: center;
-    position: relative;
-    top: 10%;
-    font-size: 2rem;
-    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-    margin-left: 40px;
-  }
-  .time h1 {
-    font-size: 4rem;
-  }
-  .message {
-    top: 10%;
-    background-color: white;
-    color: black;
-    width: 240px;
-    height: 210px;
-    border-radius: 20%;
-    display: none;
-    margin-left: 15px;
-  }
-  
-  .message button {
-    position: relative;
-    left: 10px;
-    padding: 10px;
-    width: 200px;
-    margin-top: 10px;
-    text-align: left;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    height: 40px;
-  }
-  .innermessage {
-    top: 10%;
-    background-color: white;
-    color: black;
-    width: 240px;
-    height: 210px;
-    border-radius: 20%;
-    display: none;
-    margin-left: 15px;
-  }
-  .innermessage p {
-    position: relative;
-    left: 10px;
-    padding: 10px;
-    top: 20px;
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-  }
-  .buttons {
-    position: relative;
-    top: 3%;
-    display: flex;
-    justify-content: space-between;
-    margin: 0px 30px;
-  }
-  .buttons button {
-    background-color: transparent;
-    border: none;
-    outline: none;
-  }
-  .far,
-  .fas {
-    color: white;
-    font-size: 25px;
-  }
-  .watch h4 {
-    cursor: pointer;
-  }
-  .music {
-    position: relative;
-    top: 1%;
-    font-size: 1.3rem;
-    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-    display: none;
-  }
-  .player {
-    display: flex;
-    background: linear-gradient(to right, green, blue, orangered, yellow);
-    width: 260px;
-    border-radius: 10%;
-    margin-left: 8px;
-  }
-  article {
-    margin: 5px;
-  }
-  #trackname {
-    font-size: 1.5rem;
-    text-shadow: 0px 8px 5px black;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-    letter-spacing: 0.8px;
-    border: solid rgba(0, 0, 0, 0.342);
-    word-break: break-all;
-  }
-  .player img {
-    width: 60px;
-    height: 60px;
-    margin-left: 4px;
-    margin-right: 10px;
-  }
-  audio {
-    width: 230px;
-    margin-left: 3px;
-  }
-  .list {
-    overflow-y: scroll;
-    height: 130px;
-    width: 270px;
-    padding: 5px;
-  }
-  /* width */
-  ::-webkit-scrollbar {
-    width: 5px;
-  }
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: gray;
-    border-radius: 10px;
-  }
-  .play-pauseBtn {
-    display: flex;
-  }
-  .play-pauseBtn button {
-    margin-left: 5px;
-    margin-top: 5px;
-    background-color: transparent;
-    border: 1px solid red;
-    color: white;
-    padding: 5px;
-    background-color: black;
-    border-radius: 10px;
-    width: 100px;
-  }
-  .play-pauseBtn button:hover {
-    transition: 1s all linear;
-    border: 1px solid white;
-    color: red;
-    outline: none;
-    box-shadow: 0px 1px 9px white;
-  }
-  .list ul li {
-    padding: 5px;
-    cursor: pointer;
-    border-bottom: 1px solid white;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  }
-  span {
-    display: flex;
-    justify-content: flex-end;
-    color: red;
-    overflow-y: scroll;
-    font-size: 1rem;
-    text-align: justify;
-    font-family: cursive;
-    text-shadow: 0px 1px 10px white;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  border: 1px solid black;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+}
+
+.left {
+  width: 50vw;
+  background: #21292f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: xx-large;
+}
+
+.right {
+  width: 50vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.watch {
+  background: black;
+  height: 50vh;
+  width: 22vw;
+  border-radius: 85px;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+}
+
+.watchBack {
+  position: absolute;
+  background: #3b3b3b;
+  height: 60vh;
+  width: 22vw;
+  border-radius: 100px;
+  z-index: -1;
+}
+
+#timeS {
+  align-self: flex-start;
+  position: absolute;
+  font-size: x-large;
+}
+
+.timeB {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: xxx-large;
+  height: 35vh;
+  justify-content: center;
+}
+
+.screen {
+  height: 40vh;
+  width: 16vw;
+  border-radius: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.icons {
+  height: 6vh;
+  width: 21vw;
+  align-self: end;
+  position: absolute;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.icons img:is(:nth-child(1), :nth-child(2), :nth-child(3)) {
+  opacity: 0.5;
+}
+
+.sms {
+  display: none;
+  flex-direction: column;
+  background: aliceblue;
+  height: 94%;
+  width: 16vw;
+  border-radius: 38px;
+  padding: 7%;
+  color: black;
+}
+
+.sms p {
+  height: 7vh;
+  border-bottom: 1px solid #0000005c;
+  display: flex;
+  align-items: center;
+}
+
+#showMsg {
+  position: absolute;
+  background: aliceblue;
+  height: 34vh;
+  width: 14vw;
+  border: none;
+  display: none;
+}
+
+.media {
+  height: 92%;
+  width: 100%;
+  display: none;
+  flex-direction: column;
+}
+
+.mtop {
+  height: 10vh;
+  display: flex;
+}
+
+.mleft {
+  width: 30%;
+}
+
+.mright {
+  width: 70%;
+  background: #222;
+}
+
+.mbottom {
+  width: 100%;
+  height: 73%;
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.mbottom::-webkit-scrollbar {
+  background: black;
+  width: 8px;
+}
+
+.mbottom::-webkit-scrollbar-thumb {
+  background: #222;
+  border-radius: 50px;
+}
+audio::-webkit-media-controls-enclosure {
+  background-color: #222222;
+}
+audio {
+  width: 100%;
+  height: 85%;
+}
+.song {
+  display: flex;
+  justify-content: space-between;
+  margin: 2vh;
+}
